Fixed Chrome issue With header
Applying padding in Header caused extra spacing. CSS modifications fixed the issue

--- a/seabnb_client/src/assets/css/App.css
+++ b/seabnb_client/src/assets/css/App.css
@@ -1,10 +1,10 @@
 .App {
   display: grid;
   /* grid-template-rows: 10vh repeat(2, 1fr); */
-  grid-template-rows: 10vh 1fr auto;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 10vh 1fr ;
+  /* grid-template-columns: repeat(2, 1fr); */
+  grid-template-columns: 100vw;
   min-height: 100vh;
-  width: 100vw;
 }
 .gridHeaderItem {
   grid-column: 1/-1;
@@ -18,7 +18,7 @@
   grid-row: 2/-1;
   padding: 20px 40px;
 }
-.toastify {
+/* .toastify {
   height: 0px;
   width: 0px;
-}
+} */
